--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -15,7 +15,7 @@
 {{> location}}
 {{> countdown}}
 {{> tableSort}}
-{{#if (eq page.componentVersion.displayVersion '6.3 Beta')}}
+{{#if (eq page.componentVersion.displayVersion '6.3 beta')}}
 {{> badge}}
 {{/if}}
   </body>
