--- a/src/partials/badge.hbs
+++ b/src/partials/badge.hbs
@@ -1,5 +1,5 @@
 <div class="floating-badge" id="floating-badge">
-  <img src="{{{uiRootPath}}}/img/rebrand-icon-dark.svg" alt=""> <span>Beta</span>
+  <img src="{{{uiRootPath}}}/img/rebrand-icon-dark.svg" alt=""> <span>6.3 beta</span>
 </div>
 
 <div class="dialog" id="dialog">
@@ -12,7 +12,7 @@
   </div>
   <div class="right-content">
     <!-- Right content -->
-    <h3 class="dialogTitle">Magnolia 6.3 Beta</h3>
+    <h3 class="dialogTitle">Magnolia 6.3 beta</h3>
     <p class="dialogText">Magnolia 6.3 is in beta release. We are continually updating docs based on customer and partner feedback.</p>
     <p class="dialogText">Due to the nature of beta releases, consider the 6.3 docs currently in a state of progress and not final.</p>
   </div>
