--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -5,6 +5,7 @@
   --color-primary-light-green: #f5f8ea;
   --color-green-reflex: #7ecb13;
   --color-green-reflex-latest: #7ecb13;
+  --color-status-green: #c6ed9e;
   --color-green-darker: #599900;
   --color-primary-plum: #652445;
   --color-primary-plum-light: #e27caf;
@@ -12,6 +13,7 @@
   --color-primary-light-gold: #ffd87e;
   --color-primary-light-grey: #f6f6f6;
   --color-primary-yellow: #ffc226;
+  --color-status-yellow: #fbdf85;
   --color-primary-blue: #4aace9;
   --color-digital-blue: #0569f9;
   --color-primary-ocean-blue: #00adef;
@@ -31,6 +33,7 @@
   --rebrand-color-primary-red: #c02d2d;
   --color-orange: #f48a16;
   --color-red: #f76733;
+  --color-status-red: #ffd9cb;
   --color-trials: #080a37;
   --color-white: #fff;
   --color-smoke-10: #fefefe;
@@ -45,6 +48,7 @@
   --color-gray-light: #a8a8a8;
   --color-gray-medium: #e9ebe8;
   --color-gray-dark: #1e1f1c;
+  --color-status-gray: #DBDBDB;
   --color-jet-20: #4a4a4a;
   --color-jet-30: #424242;
   --color-jet-50: #333;
