--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -343,8 +343,8 @@ docsearch({
   container: '#docsearch',
   appId: 'IIQKXJ786V',
   apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-  indexName: 'landing_page',
-  searchParameters: { hitsPerPage: 12 },
+  indexName: 'dev_DOCS',
+  searchParameters: { hitsPerPage: 15 },
 });
 
 </script>
