--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -40,99 +40,6 @@
 </script>
 {{/if}}
 
-{{#if (eq page.layout 'saas')}}
-<script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'saas',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12 },
-        debug: true // prevent it from closing on inspection.
-    });
-
-    function toggleDropDown () {
-      var linkEl = document.querySelectorAll('.has-dropdown');
-      var allDrops =  document.querySelectorAll('.has-dropdown .navbar-dropdown');
-      for (var el of linkEl) {
-        el.addEventListener('click', function (e) {
-          for (var drop of allDrops) {
-            drop.style.display = "none";
-          }
-          e.stopPropagation()
-          e.target.nextElementSibling.style.display = "block";
-        })
-      }
-    }
-    if(window.innerWidth < 1200) {
-      toggleDropDown();
-    }
-
-</script>
-{{/if}}
-
-{{#if (eq page.layout 'splash-saas')}}
-<script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'saas',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12 },
-        debug: true // prevent it from closing on inspection.
-    });
-
-    function toggleDropDown () {
-      var linkEl = document.querySelectorAll('.has-dropdown');
-      var allDrops =  document.querySelectorAll('.has-dropdown .navbar-dropdown');
-      for (var el of linkEl) {
-        el.addEventListener('click', function (e) {
-          for (var drop of allDrops) {
-            drop.style.display = "none";
-          }
-          e.stopPropagation()
-          e.target.nextElementSibling.style.display = "block";
-        })
-      }
-    }
-    if(window.innerWidth < 1200) {
-      toggleDropDown();
-    }
-
-</script>
-{{/if}}
-
-{{#if (eq page.layout 'home-saas')}}
-<script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'saas',
-        container: '#searchBar',
-        searchParameters: { hitsPerPage: 12 },
-        debug: true // prevent it from closing on inspection.
-    });
-
-    function toggleDropDown () {
-      var linkEl = document.querySelectorAll('.has-dropdown');
-      var allDrops =  document.querySelectorAll('.has-dropdown .navbar-dropdown');
-      for (var el of linkEl) {
-        el.addEventListener('click', function (e) {
-          for (var drop of allDrops) {
-            drop.style.display = "none";
-          }
-          e.stopPropagation()
-          e.target.nextElementSibling.style.display = "block";
-        })
-      }
-    }
-    if(window.innerWidth < 1200) {
-      toggleDropDown();
-    }
-
-</script>
-{{/if}}
-
 {{#if (eq page.layout 'default')}}
 <script type="text/javascript">
     docsearch({
@@ -257,7 +164,7 @@
 </script>
 {{/if}}
 
-{{#if (eq page.layout 'home')}}
+{{!-- {{#if (eq page.layout 'home')}}
 <script type="text/javascript">
     docsearch({
         appId: 'IIQKXJ786V',
@@ -286,7 +193,7 @@
     }
 
 </script>
-{{/if}}
+{{/if}} --}}
 
 {{!-- <script src="//www.eucookie.eu/public/gdpr-cookie-consent.js" type="text/javascript"></script>
 <script type="text/javascript">
