badge for tuning

--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -18,5 +18,8 @@
 {{#if (eq page.componentVersion.displayVersion '6.3 beta')}}
 {{> badge}}
 {{/if}}
+{{#if (eq page.component.name 'performance-tuning')}}
+{{> badge}}
+{{/if}}
   </body>
 </html>
