--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -48,7 +48,7 @@
   --color-gray-light: #a8a8a8;
   --color-gray-medium: #e9ebe8;
   --color-gray-dark: #1e1f1c;
-  --color-status-gray: #DBDBDB;
+  --color-status-gray: #dbdbdb;
   --color-jet-20: #4a4a4a;
   --color-jet-30: #424242;
   --color-jet-50: #333;
