add known issues to badge dialog

--- a/src/partials/badge.hbs
+++ b/src/partials/badge.hbs
@@ -13,8 +13,8 @@
   <div class="right-content">
     <!-- Right content -->
     <h3 class="dialogTitle">Magnolia 6.3 beta</h3>
-    <p class="dialogText">Magnolia 6.3 is in beta release. We are continually updating docs based on customer and partner feedback.</p>
-    <p class="dialogText">Due to the nature of beta releases, consider the 6.3 docs currently in a state of progress and not final.</p>
+    <p class="dialogText">Magnolia 6.3 is in beta. We are updating docs based on development and feedback. Consider the 6.3 docs currently in a state of progress and not final.</p>
+    <p class="dialogText">We are working on some <a href="{{{siteRootPath}}}/product-docs/6.3/known-issues-beta/">6.3-beta known issues</a> during this phase.</p>
   </div>
 </div>
 
