--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -137,7 +137,7 @@
         </a>
 
         <a class="navbar-item" href="https://docs.magnolia-cms.com/paas/">
-          DX Cloud PaaS
+          PaaS
         </a>
 
         {{!-- <a class="navbar-item" href="https://www.magnolia-cms.com/get-started/demo.html" target="_blank">
@@ -201,7 +201,7 @@
             </h2>
             <div class="buttons">
               <a class="button" href="https://docs.magnolia-cms.com/product-docs/6.2/">DX Core</a>
-              <a class="button" href="https://docs.magnolia-cms.com/paas/">DX Cloud PaaS</a>
+              <a class="button" href="https://docs.magnolia-cms.com/paas/">PaaS</a>
             </div>
           </div>
 
