badge for sso in beta hardening

--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -21,5 +21,8 @@
 {{#if (eq page.component.name 'performance-tuning')}}
 {{> badge}}
 {{/if}}
+{{#if (eq page.component.name 'magnolia-sso')}}
+{{> badge}}
+{{/if}}
   </body>
 </html>
