sso version correction

--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -21,7 +21,7 @@
 {{#if (eq page.component.name 'performance-tuning')}}
 {{> badge}}
 {{/if}}
-{{#if (and (eq page.component.name 'magnolia-sso') (eq page.componentVersion '4.0.x'))}}
+{{#if (and (eq page.component.name 'magnolia-sso') (eq page.componentVersion.displayVersion '4.0.x'))}}
 {{> badge}}
 {{/if}}
 {{!-- {{#if (eq page.component.name 'magnolia-sso')}}
