--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -361,11 +361,11 @@
     <div class="navbar-menu">
 
       <div class="navbar-end">
-        <a class="navbar-item" href="https://docs.magnolia-cms.com/product-docs/6.2/releases/">
+        <a class="navbar-item" href="{{{siteRootPath}}}/product-docs/6.2/releases/">
           DX Core Releases
         </a>
 
-        <a class="navbar-item" href="https://docs.magnolia-cms.com/paas/">
+        <a class="navbar-item" href="{{{siteRootPath}}}/paas/">
           PaaS
         </a>
 
@@ -421,21 +421,21 @@
           is-6-widescreen
           is-6-fullhd">
             <h2 class="subtitled subtitle">
-              Introduce one key message like the release of 6.3
+              Our latest release is Magnolia 6.2.45
             </h2>
             <p class="paragraph">
-              Magnolia’s modular architecture is well-suited for building industry-specific solutions that require scalability, reliability and excellent support.
+              Magnolia's modular architecture is well-suited for building industry-specific solutions that require scalability, reliability and excellent support.
             </p>
             <div class="buttons">
-              <a class="link" href="https://docs.magnolia-cms.com/paas/">
-                Learn more about the release
+              <a class="link" href="{{{siteRootPath}}}/product-docs/6.2/releases/">
+                Learn more
               </a>
             </div>
           </div>
         </div>
         <div class="columns">
            <div class="column is-6-desktop is-10-tablet">
-            <h3 class="h3 h3--green">These are releases, paths, or three things you want to talk about</h3>
+            <h3 class="h3 h3--green">See the documentation that suits your Magnolia experience</h3>
           </div>
         </div>
 
@@ -443,30 +443,30 @@
 
           <div class="column is-4-widescreen is-6-desktop is-6-tablet">
             <div class="card-x">
-              <h3 class="card-x__title h3">6.2</h3>
-              <p class="card-x__p">Magnolia CMS 6.2.45 introduces a few improvements primarily around Java 21 support, performance, and the Delivery API. We also fixed a few issues and further enhanced our security. </p>
+              <h3 class="card-x__title h3"><i class="fa fa-code" aria-hidden="true"></i> Developers</h3>
+              <p class="card-x__p">Get to know the technical setup for Magnolia. Get started with tutorials, learn how to create your own modules for Magnolia, or try out our APIs. In the Developers section, you find the set of tools required for development.</p>
               <div class="card-x__link-w">
-                <a class="card-x__link link" href="#">Read more on 6.2</a>
+                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/6.2/developing/">Learn more</a>
               </div>
             </div>
           </div>
 
           <div class="column is-4-widescreen is-6-desktop is-6-tablet">
             <div class="card-x">
-              <h3 class="card-x__title h3">Connector Packs and Special Features</h3>
-              <p class="card-x__p">Connector Packs and Special Features complement the DX Core releases. See the Connector Pack and Special Feature changelog.</p>
+              <h3 class="card-x__title h3"><i class="fa fa-pencil" aria-hidden="true"></i> Authors</h3>
+              <p class="card-x__p">Focus on using Magnolia by getting to know Admincentral. Get acquainted with editing pages, managing assets, and publishing your updates.</p>
               <div class="card-x__link-w">
-                <a class="card-x__link link" href="#">See connector packs</a>
+                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/6.2/authoring/">Learn more</a>
               </div>
             </div>
           </div>
 
           <div class="column is-4-widescreen is-6-desktop is-6-tablet">
             <div class="card-x">
-              <h3 class="card-x__title h3">Magnolia Cloud and DX Cloud PaaS</h3>
-              <p class="card-x__p">Magnolia Cloud and DX Cloud PaaS both typically support the most recent versions of Magnolia branches as well as bringing in additional cloud-specific features. For more, check out their respective changelogs.</p>
+              <h3 class="card-x__title h3"><i class="fa fa-cogs" aria-hidden="true"></i> Magnolia PaaS</h3>
+              <p class="card-x__p">Magnolia Platform as a Service (PaaS) typically supports the most recent versions of Magnolia branches as well as bringing in additional cloud-specific features. Manage it all directly from your dedicated PaaS cockpit.</p>
               <div class="card-x__link-w">
-                <a class="card-x__link link" href="#">Explore DX Cloud</a>
+                <a class="card-x__link link" href="{{{siteRootPath}}}/paas/">Learn more</a>
               </div>
             </div>
           </div>
@@ -576,7 +576,7 @@
  <section class="footer-banner">
    <div class="container">
      <h2 class="h1">Get started with a free demo</h2>
-     <a class="link-button button is-primary">Book a Demo<a/>
+     <a class="link-button button is-primary" href="https://www.magnolia-cms.com/get-started/demo.html">Book a Demo<a/>
    </div>
  </section> 
 {{> footer}}
@@ -617,7 +617,7 @@ docsearch({
   container: '#docsearch',
   appId: 'IIQKXJ786V',
   apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-  indexName: 'landing_page',
+  indexName: 'dev_DOCS',
   searchParameters: { hitsPerPage: 12 },
 });
 
