--- a/src/css/header.css
+++ b/src/css/header.css
@@ -431,7 +431,7 @@ span.icon-wrapper {
   white-space: nowrap;
   /* box-shadow: var(--rebrand-color-primary-green) 0 2px 4px; */
   transition: all 0.4s ease-in-out;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 
 .navbar .button:hover {
