--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -21,14 +21,14 @@
 {{#if (eq page.component.name 'performance-tuning')}}
 {{> badge}}
 {{/if}}
-{{#if (and (eq page.component.name 'magnolia-sso') (eq page.componentVersion.displayVersion '4.0.x'))}}
+{{#if (and (eq page.component.name 'magnolia-sso') (eq page.componentVersion.displayVersion '4.0.x beta'))}}
 {{> badge}}
 {{/if}}
-{{#if (and (eq page.component.name 'live-copy') (eq page.componentVersion.displayVersion '4.x'))}}
+{{#if (and (eq page.component.name 'ecommerce') (eq page.componentVersion.displayVersion '2.x beta'))}}
 {{> badge}}
 {{/if}}
-{{!-- {{#if (eq page.component.name 'magnolia-sso')}}
+{{#if (and (eq page.component.name 'live-copy') (eq page.componentVersion.displayVersion '4.x beta'))}}
 {{> badge}}
-{{/if}} --}}
+{{/if}}
   </body>
 </html>
