Change color of heading and paragraph in hero

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -36,6 +36,11 @@
       padding-bottom: 100px!important;
     }
 
+    .hero.is-white :where(.subtitle, .paragraph) {
+      color:  #003740;
+    }
+
+  
     .titled {
       font-family: var(--lora)!important;
       font-size: 68px !important;
