Add defautl text to search bar

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -92,6 +92,16 @@
       border-radius: 0;
       margin: 0;
       padding: 0!important;
+      position: relative;
+    }
+
+    button.DocSearch.DocSearch:after {
+      position: absolute;
+      content: "What can we help you find";
+      left: 45px;
+      font-size: 2rem;
+      width: auto;
+      height: auto;
     }
 
     span.DocSearch-Button-Placeholder {
