--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -97,7 +97,7 @@
 
     button.DocSearch.DocSearch:after {
       position: absolute;
-      content: "What can we help you find";
+      content: "What can we help you find?";
       left: 45px;
       font-size: 2rem;
       width: auto;
