--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -104,6 +104,18 @@
       height: auto;
     }
 
+    @media(max-width: 768px) {
+      button.DocSearch.DocSearch:after {
+        font-size: 1.5rem;
+      }
+    }
+
+    @media(max-width: 600px) {
+      button.DocSearch.DocSearch:after {
+        font-size: 1rem;
+      }
+    }
+    
     span.DocSearch-Button-Placeholder {
       content: 'Test' !important;
     }
