--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -115,9 +115,12 @@
         font-size: 1rem;
       }
     }
-    
-    span.DocSearch-Button-Placeholder {
-      content: 'Test' !important;
+
+    @media(max-width: 467px) {
+      button.DocSearch.DocSearch:after {
+        content: "Search";
+        font-size: 1.2rem;
+      }
     }
 
      .button {
