--- a/src/partials/feedback.hbs
+++ b/src/partials/feedback.hbs
@@ -1,6 +1,6 @@
 {{#if (eq page.layout 'default')}}
     <div id="feedback">
-        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        <a href="https://magnolia-cms.atlassian.net/secure/CreateIssue.jspa?pid=10039&issuetype=10002" target="_blank" rel="noopener">
         Feedback
         </a>
     </div>
@@ -16,7 +16,7 @@
  
 {{#if (eq page.layout 'paas')}}
     <div id="feedback-paas">
-        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        <a href="https://magnolia-cms.atlassian.net/secure/CreateIssue.jspa?pid=10039&issuetype=10002" target="_blank" rel="noopener">
         Feedback
         </a>
     </div>
@@ -24,7 +24,7 @@
 
 {{#if (eq page.layout 'incubate')}}
     <div id="feedback-incubate">
-        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        <a href="https://magnolia-cms.atlassian.net/secure/CreateIssue.jspa?pid=10039&issuetype=10002" target="_blank" rel="noopener">
         Feedback
         </a>
     </div>
@@ -32,7 +32,7 @@
 
 {{#if (eq page.layout 'cloud')}}
     <div id="feedback-cloud">
-        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        <a href="https://magnolia-cms.atlassian.net/secure/CreateIssue.jspa?pid=10039&issuetype=10002" target="_blank" rel="noopener">
         Feedback
         </a>
     </div>
@@ -40,7 +40,7 @@
  
 {{#if (eq page.layout 'headless')}}
     <div id="feedback-headless">
-        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        <a href="https://magnolia-cms.atlassian.net/secure/CreateIssue.jspa?pid=10039&issuetype=10002" target="_blank" rel="noopener">
         Feedback
         </a>
     </div>
