update the badge for rc release(s)

--- a/src/partials/badge.hbs
+++ b/src/partials/badge.hbs
@@ -1,5 +1,5 @@
 <div class="floating-badge" id="floating-badge">
-  <img src="{{{uiRootPath}}}/img/rebrand-icon-dark.svg" alt=""> <span>6.3 beta</span>
+  <img src="{{{uiRootPath}}}/img/rebrand-icon-dark.svg" alt=""> <span>6.3 RC</span>
 </div>
 
 <div class="dialog" id="dialog">
@@ -12,9 +12,9 @@
   </div>
   <div class="right-content">
     <!-- Right content -->
-    <h3 class="dialogTitle">Magnolia 6.3 beta</h3>
-    <p class="dialogText">Magnolia 6.3 is in beta. We are updating docs based on development and feedback. Consider the 6.3 docs currently in a state of progress and not final.</p>
-    <p class="dialogText">We are working on some <a href="{{{siteRootPath}}}/product-docs/6.3/known-issues-beta/">6.3-beta known issues</a> during this phase.</p>
+    <h3 class="dialogTitle">Magnolia 6.3 RC</h3>
+    <p class="dialogText">Magnolia 6.3 is in Release Candidate status. We are updating docs based on development and feedback. Consider the 6.3 docs currently in a state of progress and not final.</p>
+    <p class="dialogText">We are working on some <a href="{{{siteRootPath}}}/product-docs/6.3/known-issues-beta/">6.3-rc known issues</a> during this phase.</p>
   </div>
 </div>
 
