updates for rc badge

--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -15,7 +15,7 @@
 {{> location}}
 {{> countdown}}
 {{> tableSort}}
-{{#if (eq page.componentVersion.displayVersion '6.3 beta')}}
+{{#if (eq page.componentVersion.displayVersion '6.3 rc')}}
 {{> badge}}
 {{/if}}
 {{#if (eq page.component.name 'performance-tuning')}}
