--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -133,7 +133,7 @@
 </script>
 {{/if}}
 
-{{#if (and (eq page.layout 'default') (eq page.componentVersion.displayVersion '6.3 beta'))}}
+{{#if (and (eq page.layout 'default') (eq page.componentVersion.displayVersion '6.3 rc'))}}
 
 <script type="text/javascript">
     docsearch({
