home is in layout for search lvl0 force

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -648,7 +648,7 @@ docsearch({
   appId: 'IIQKXJ786V',
   apiKey: '450fd6db7d4e2f26607012f0d8683a29',
   indexName: 'dev_DOCS',
-  searchParameters: { hitsPerPage: 12 },
+  searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] } },
 });
 
 </script>
