paas footer search

--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -266,7 +266,7 @@
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'dev_DOCS',
         container: '#searchBar',
-        searchParameters: { hitsPerPage: 12 },
+        searchParameters: { hitsPerPage: 12, attributesToHighlight: ["hierarchy.lvl0"] },
         debug: true // prevent it from closing on inspection.
     });
 
