specific release on new home ui

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -457,7 +457,7 @@
               Magnolia's modular architecture is well-suited for building industry-specific solutions that require scalability, reliability and excellent support.
             </p>
             <div class="buttons">
-              <a class="link" href="{{{siteRootPath}}}/product-docs/6.3/releases/">
+              <a class="link" href="{{{siteRootPath}}}/product-docs/6.3/releases/release-notes-for-magnolia-cms-6.3/">
                 Learn more
               </a>
             </div>
