--- a/src/partials/beforeAfter.hbs
+++ b/src/partials/beforeAfter.hbs
@@ -25,9 +25,9 @@ var settings = jQuery.extend({
     opacity: 0.5,
     activeOpacity: 1,
     hoverOpacity: 0.75,
-    separatorColor: '#599900',
+    separatorColor: '#02373f',
     bulletColor: '#000',
-    arrowColor: '#7ecb13',
+    arrowColor: '#d3f0a5',
 }, options);
 
 function beforeAfter(that) {
