--- a/src/layouts/api.hbs
+++ b/src/layouts/api.hbs
@@ -19,6 +19,10 @@
         background-color: white !important;
         scroll-behavior: auto !important;
       }
+
+      #redoc-container blockquote {
+        font-size: 1rem !important;
+      }
     </style>
   </head>
   <body class="redoc">
