--- a/src/css/page-versions.css
+++ b/src/css/page-versions.css
@@ -8,8 +8,8 @@
   border-radius: 5px;
   transition: 0.5s ease;
   font-weight: bolder;
-  font-size: 1rem;
-  min-width: 5vw;
+  min-width: 4vw;
+  font-size: calc(15.5 / var(--rem-base) * 1rem);
 }
 
 .page-versions:hover,
@@ -29,7 +29,7 @@
   position: relative;
   z-index: var(--z-index-page-version-menu);
   font-weight: bolder;
-  min-width: 5vw;
+  min-width: 4vw;
 }
 
 .page-versions .version-menu {
