--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -5,7 +5,7 @@
   --color-primary-light-green: #f5f8ea;
   --color-green-reflex: #7ecb13;
   --color-green-reflex-latest: #7ecb13;
-  --color-status-green: #B3EEC6;
+  --color-status-green: #b3eec6;
   --color-green-darker: #599900;
   --color-primary-plum: #652445;
   --color-primary-plum-light: #e27caf;
@@ -13,7 +13,7 @@
   --color-primary-light-gold: #ffd87e;
   --color-primary-light-grey: #f6f6f6;
   --color-primary-yellow: #ffc226;
-  --color-status-yellow: #FFDC94;
+  --color-status-yellow: #ffdc94;
   --color-primary-blue: #4aace9;
   --color-digital-blue: #0569f9;
   --color-primary-ocean-blue: #00adef;
@@ -33,7 +33,7 @@
   --rebrand-color-primary-red: #c02d2d;
   --color-orange: #f48a16;
   --color-red: #f76733;
-  --color-status-red: #FED8D2;
+  --color-status-red: #fed8d2;
   --color-trials: #080a37;
   --color-white: #fff;
   --color-smoke-10: #fefefe;
