missing gtm scripts in new home page

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="{{{uiRootPath}}}/css/site.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
   <link rel="icon" href="{{{uiRootPath}}}/img/mgnl-favicon-darkTeal-32.png" type="image/png">
+  {{> header-scripts}}
+  {{> head-scripts}}
   <style>
     :root {
         --lora: 'Lora', serif !important;
