--- a/src/layouts/api.hbs
+++ b/src/layouts/api.hbs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{{{uiRootPath}}}/css/site.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" />
     <link rel="icon" href="{{{uiRootPath}}}/img/mgnl-favicon-darkTeal-32.png" type="image/png">
+    {{> header-scripts}}
+    {{> head-scripts}}
     <!--
     ReDoc doesn't change outer page styles
     -->
